input login e senha

--- a/web/cader/src/app/core/pages/login/login.component.html
+++ b/web/cader/src/app/core/pages/login/login.component.html
@@ -1,1 +1,21 @@
-<p>login works!</p>
+<div class="card">
+  <div class="cardInte">
+    <h1>Cader</h1>
+    <div class="inputLogin">
+      <input-text
+        [ob]="ob"
+        [atributo]="'username'"
+        [label]="'Username'"
+        [placeholder]="'Username'"
+        [isDisabled]="false"
+      />
+    </div>
+    <input-password
+      [ob]="ob"
+      [atributo]="'password'"
+      [label]="'Password'"
+      [placeholder]="'Password'"
+      [isDisabled]="false"
+    />
+  </div>
+</div>
