--- a/web/cader/src/styles.scss
+++ b/web/cader/src/styles.scss
@@ -1,6 +1,4 @@
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
 
-body {
-  font-family: var(--font-family);
-}
+@import "./scss/";
