--- a/web/cader/src/app/core/pages/login/login.component.scss
+++ b/web/cader/src/app/core/pages/login/login.component.scss
@@ -39,15 +39,15 @@
     .card {
       max-width: 1024px;
       width: 100%;
-      margin: 5% auto;
-      padding: 0 10% 10% 10%;
+      margin: 3% auto;
+      padding: 0 7% 8% 7%;
       border: 0.4px solid #9f9eaa;
       border-radius: 5px;
     }
 
     .cardInte {
       margin: 0 auto;
-      padding: 5rem;
+      padding: 5rem 5rem 0 5rem;
       min-width: 600px;
     }
   }
