servico de login

--- a/web/cader/src/app/core/pages/login/login.component.html
+++ b/web/cader/src/app/core/pages/login/login.component.html
@@ -4,9 +4,9 @@
     <div class="inputLogin">
       <input-text
         [ob]="ob"
-        [atributo]="'username'"
-        [label]="'Username'"
-        [placeholder]="'Username'"
+        [atributo]="'login'"
+        [label]="'Login'"
+        [placeholder]="'Login'"
         [isDisabled]="false"
       />
     </div>
