--- a/web/cader/src/app/components/prime/toolbar/toolbar.component.html
+++ b/web/cader/src/app/components/prime/toolbar/toolbar.component.html
@@ -1,4 +1,13 @@
-<p-toolbar>
+<div class="fullW toolBar">
+  <button class="btn-icon">
+    <i class="pi pi-check"></i>
+  </button>
+  <button class="btn-icon">
+    <i class="pi pi-save"></i>
+  </button>
+</div>
+
+<p-toolbar styleClass="backColor">
   <div class="p-toolbar-group-start">
     <p-button label="New" icon="pi pi-plus" class="mr-2"></p-button>
     <p-button
