--- a/web/cader/src/app/components/prime/sidebar/sidebar.component.html
+++ b/web/cader/src/app/components/prime/sidebar/sidebar.component.html
@@ -1,9 +1,3 @@
 <p-sidebar [(visible)]="sidebarVisible">
-  <h3>Sidebar</h3>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat.
-  </p>
+  <tree-menu></tree-menu>
 </p-sidebar>
