--- a/web/cader/src/app/core/pages/login/login.component.scss
+++ b/web/cader/src/app/core/pages/login/login.component.scss
@@ -1,14 +1,20 @@
 :host {
+  padding-top: 4%;
+
   .inputLogin,
   h1 {
     margin-bottom: 3rem;
   }
 
   @media screen and (max-width: 479px) {
+    .body {
+      padding-top: 40%;
+    }
+
     .card {
       max-width: 1024px;
       width: 100%;
-      margin: 40% auto;
+      margin: 0 auto;
       padding: 0 10%;
     }
 
@@ -19,14 +25,17 @@
   }
 
   @media screen and (min-width: 480px) and (max-width: 1023px) {
+    .body {
+      padding-top: 6%;
+    }
     .card {
       width: 100%;
       margin: 10% auto 0 auto;
-      padding: 0 10%;
+      padding: 3% 7%;
     }
 
     .cardInte {
-      padding: 5% 10%;
+      padding: 2% 7%;
       border: 0.4px solid #9f9eaa;
       border-radius: 5px;
       margin: 0 auto;
@@ -36,10 +45,14 @@
   }
 
   @media screen and (min-width: 1024px) {
+    .body {
+      padding-top: 6%;
+    }
+
     .card {
       max-width: 1024px;
       width: 100%;
-      margin: 3% auto;
+      margin: 0 auto;
       padding: 0 7% 8% 7%;
       border: 0.4px solid #9f9eaa;
       border-radius: 5px;
@@ -47,7 +60,7 @@
 
     .cardInte {
       margin: 0 auto;
-      padding: 5rem 5rem 0 5rem;
+      padding: 3rem 5rem 0 5rem;
       min-width: 600px;
     }
   }
