--- a/web/cader/src/app/components/prime/data-table/data-table.component.html
+++ b/web/cader/src/app/components/prime/data-table/data-table.component.html
@@ -1,5 +1,6 @@
 <div>
   <input
+    class="fullW filterTable"
     type="text"
     #input
     (keyup)="search(input.value)"
@@ -9,7 +10,7 @@
     <p-table
       [value]="dataShow"
       [paginator]="true"
-      [rows]="5"
+      [rows]="10"
       [showCurrentPageReport]="true"
       [tableStyle]="{ 'min-width': '50rem' }"
       currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
@@ -28,7 +29,7 @@
         </tr>
       </ng-template>
       <ng-template pTemplate="body" let-item>
-        <tr>
+        <tr class="lineHover" (click)="select(item)">
           <td>
             <p-tableRadioButton [value]="item"></p-tableRadioButton>
           </td>
