--- a/web/cader/src/app/components/material/toolbar/toolbar.component.html
+++ b/web/cader/src/app/components/material/toolbar/toolbar.component.html
@@ -13,8 +13,9 @@
     mat-icon-button
     class="example-icon favorite-icon"
     aria-label="Example icon-button with heart icon"
+    (click)="load()"
   >
-    <mat-icon>favorite</mat-icon>
+    <mat-icon>dvr</mat-icon>
   </button>
   <button
     mat-icon-button
