--- a/web/cader/src/app/components/prime/data-table/data-table.component.html
+++ b/web/cader/src/app/components/prime/data-table/data-table.component.html
@@ -12,7 +12,7 @@
       [paginator]="true"
       [rows]="10"
       [showCurrentPageReport]="true"
-      [tableStyle]="{ 'min-width': '50rem' }"
+      [tableStyle]="{ width: '100%' }"
       currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
       [rowsPerPageOptions]="[10, 15, 50]"
       [(selection)]="selected"
