--- a/web/cader/src/app/auth/register/person/person-list/person-list.component.html
+++ b/web/cader/src/app/auth/register/person/person-list/person-list.component.html
@@ -1,1 +1,3 @@
-<data-table [data]="list" [header]="header" [atributos]="atributos" />
+<div *ngIf="loading">
+  <data-table [data]="list" [header]="header" [atributos]="atributos" />
+</div>
