--- a/web/cader/src/app/auth/view/view.component.html
+++ b/web/cader/src/app/auth/view/view.component.html
@@ -1,3 +1,5 @@
 <menu></menu>
-<router-outlet></router-outlet>
+<div class="bodyApp">
+  <router-outlet></router-outlet>
+</div>
 <ng-template *ngIf="loading"> Loading </ng-template>
