--- a/web/cader/src/app/components/prime/data-table/data-table.component.html
+++ b/web/cader/src/app/components/prime/data-table/data-table.component.html
@@ -6,52 +6,54 @@
     (keyup)="search(input.value)"
     placeholder="Filtro"
   />
-  <div class="card">
-    <p-table
-      [value]="dataShow"
-      [paginator]="true"
-      [rows]="10"
-      [showCurrentPageReport]="true"
-      [tableStyle]="{ width: '100%' }"
-      currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-      [rowsPerPageOptions]="[10, 15, 50]"
-      [(selection)]="selected"
-    >
-      <ng-template pTemplate="header">
-        <tr>
-          <th style="width: 4rem"></th>
-          <th
-            *ngFor="let itemHeader of header"
-            [ngStyle]="{ width: itemHeader.percentage + '%' }"
-          >
-            {{ itemHeader.description }}
-          </th>
-        </tr>
-      </ng-template>
-      <ng-template pTemplate="body" let-item>
-        <tr class="lineHover" (click)="select(item)">
-          <td>
-            <p-tableRadioButton [value]="item"></p-tableRadioButton>
-          </td>
-          <td *ngFor="let itemAtributo of atributos">
-            {{ item[itemAtributo] }}
-          </td>
-        </tr>
-      </ng-template>
-      <ng-template pTemplate="paginatorleft">
-        <p-button
-          type="button"
-          icon="pi pi-plus"
-          styleClass="p-button-text"
-        ></p-button>
-      </ng-template>
-      <ng-template pTemplate="paginatorright">
-        <p-button
-          type="button"
-          icon="pi pi-cloud"
-          styleClass="p-button-text"
-        ></p-button>
-      </ng-template>
-    </p-table>
+  <div class="bodyTable">
+    <div class="card">
+      <p-table
+        [value]="dataShow"
+        [paginator]="true"
+        [rows]="10"
+        [showCurrentPageReport]="true"
+        [tableStyle]="{ width: '100%' }"
+        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+        [rowsPerPageOptions]="[10, 15, 50]"
+        [(selection)]="selected"
+      >
+        <ng-template pTemplate="header">
+          <tr>
+            <th style="width: 4rem"></th>
+            <th
+              *ngFor="let itemHeader of header"
+              [ngStyle]="{ width: itemHeader.percentage + '%' }"
+            >
+              {{ itemHeader.description }}
+            </th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-item>
+          <tr class="lineHover" (click)="select(item)">
+            <td>
+              <p-tableRadioButton [value]="item"></p-tableRadioButton>
+            </td>
+            <td *ngFor="let itemAtributo of atributos">
+              {{ item[itemAtributo] }}
+            </td>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="paginatorleft">
+          <p-button
+            type="button"
+            icon="pi pi-plus"
+            styleClass="p-button-text"
+          ></p-button>
+        </ng-template>
+        <ng-template pTemplate="paginatorright">
+          <p-button
+            type="button"
+            icon="pi pi-cloud"
+            styleClass="p-button-text"
+          ></p-button>
+        </ng-template>
+      </p-table>
+    </div>
   </div>
 </div>
