--- a/web/cader/src/app/components/prime/data-table/data-table.component.scss
+++ b/web/cader/src/app/components/prime/data-table/data-table.component.scss
@@ -9,4 +9,9 @@
     padding: 15px;
     border-bottom: solid #3f51b5 0.3px;
   }
+
+  .bodyTable {
+    height: calc(100vh - 7rem);
+    overflow-y: scroll;
+  }
 }
