--- a/web/cader/src/app/auth/register/person/person-view/person-view.component.html
+++ b/web/cader/src/app/auth/register/person/person-view/person-view.component.html
@@ -7,5 +7,6 @@
       [placeholder]="'Nome'"
       [isDisabled]="false"
     />
+    <input-switch [label]="'Ativo'" [ob]="ob" [atributo]="'active'" />
   </div>
 </div>
