Ajustes icones ação

--- a/web/cader/src/app/auth/register/person/person-view/person-view.component.html
+++ b/web/cader/src/app/auth/register/person/person-view/person-view.component.html
@@ -5,8 +5,13 @@
       [atributo]="'name'"
       [label]="'Nome'"
       [placeholder]="'Nome'"
-      [isDisabled]="false"
+      [isDisabled]="isDisabled"
     />
-    <input-switch [label]="'Ativo'" [ob]="ob" [atributo]="'active'" />
+    <input-switch
+      [label]="'Ativo'"
+      [ob]="ob"
+      [atributo]="'active'"
+      [isDisabled]="isDisabled"
+    />
   </div>
 </div>
