--- a/web/cader/src/app/components/material/toolbar/toolbar.component.html
+++ b/web/cader/src/app/components/material/toolbar/toolbar.component.html
@@ -40,7 +40,7 @@
     mat-icon-button
     class="example-icon"
     aria-label="Example icon-button with share icon"
-    (click)="save()"
+    (click)="edit()"
     *ngIf="isView"
   >
     <mat-icon>edit </mat-icon>
@@ -60,7 +60,7 @@
     class="example-icon"
     aria-label="Example icon-button with share icon"
     (click)="save()"
-    *ngIf="isInsert || isEdit"
+    *ngIf="isEdit"
   >
     <mat-icon>cancel </mat-icon>
   </button>
