save new register

--- a/web/cader/src/app/components/material/toolbar/toolbar.component.html
+++ b/web/cader/src/app/components/material/toolbar/toolbar.component.html
@@ -59,7 +59,7 @@
     mat-icon-button
     class="example-icon"
     aria-label="Example icon-button with share icon"
-    (click)="save()"
+    (click)="cancel()"
     *ngIf="isEdit"
   >
     <mat-icon>cancel </mat-icon>
