--- a/web/cader/src/app/components/material/toolbar/toolbar.component.html
+++ b/web/cader/src/app/components/material/toolbar/toolbar.component.html
@@ -64,11 +64,21 @@
   >
     <mat-icon>cancel </mat-icon>
   </button>
+
+  <button
+    title="Listagem"
+    mat-icon-button
+    class="example-icon"
+    aria-label="Example icon-button with share icon"
+    (click)="goToList()"
+    *ngIf="isView"
+  >
+    <mat-icon>list</mat-icon>
+  </button>
   <button
     mat-icon-button
     class="example-icon"
     aria-label="Example icon-button with share icon"
-    (click)="save()"
   >
     <mat-icon>more_vert </mat-icon>
   </button>
