--- a/web/cader/src/app/components/prime/input-reais/input-reais.component.html
+++ b/web/cader/src/app/components/prime/input-reais/input-reais.component.html
@@ -1,6 +1,6 @@
 <span class="p-float-label">
   <p-inputNumber
-    class="p-inputtext-sm"
+    class="p-inputtext-sm inputNumber"
     [placeholder]="placeholder"
     [(ngModel)]="value"
     inputId="currency-us"
