--- a/web/cader/src/app/components/prime/input-date/input-date.component.html
+++ b/web/cader/src/app/components/prime/input-date/input-date.component.html
@@ -5,6 +5,7 @@
       [(ngModel)]="date"
       [showIcon]="true"
       dateFormat="dd/mm/yy"
+      [disabled]="isDisabled"
     ></p-calendar>
 
     <label htmlFor="username">{{ label }}</label>
