--- a/web/cader/src/app/components/prime/input-date/input-date.component.html
+++ b/web/cader/src/app/components/prime/input-date/input-date.component.html
@@ -1,4 +1,4 @@
-<div class="calendar-prime-impl calendar-i">
+<div class="calendar-prime-impl">
   <span class="p-float-label">
     <p-calendar
       [(ngModel)]="date"
