--- a/web/cader/src/app/components/fusion/modal-impl/modal-impl.component.scss
+++ b/web/cader/src/app/components/fusion/modal-impl/modal-impl.component.scss
@@ -32,6 +32,10 @@
   font-weight: bold;
 }
 
+.actionBtn {
+  float: right;
+}
+
 .close:hover,
 .close:focus {
   color: black;
@@ -40,6 +44,15 @@
 }
 
 .barActions {
-  padding: 0.7rem;
   border-bottom: #888 solid 0.3px;
+  background-color: blue;
+  height: 2.5rem;
+}
+
+.title {
+  color: #fff;
+  padding-top: 0.7rem;
+  padding-left: 0.7rem;
+  font-weight: bold;
+  font-size: 1.1rem;
 }
