--- a/web/cader/src/app/auth/controllership/expense/expense-view/expense-payment/expense-payment.component.html
+++ b/web/cader/src/app/auth/controllership/expense/expense-view/expense-payment/expense-payment.component.html
@@ -4,10 +4,18 @@
 
 <div class="lineLeft">
   <div class="btnActionsPayment btnActionsPaymentNew">
-    <btn-primary [label]="'Novo'" (click)="newExpensePayment()"></btn-primary>
+    <btn-primary
+      [isDisabled]="isDisabled"
+      [label]="'Novo'"
+      (click)="newExpensePayment()"
+    ></btn-primary>
   </div>
   <div *ngIf="controller.obSelect" class="btnActionsPayment">
-    <btn-primary [label]="'Carregar'" (click)="loading()"></btn-primary>
+    <btn-primary
+      [isDisabled]="isDisabled"
+      [label]="'Carregar'"
+      (click)="loading()"
+    ></btn-primary>
   </div>
 </div>
 <data-table [data]="listPayments" [header]="header" [atributos]="atributos" />
