--- a/web/cader/src/app/components/prime/btn/btn-primary/btn-primary.component.html
+++ b/web/cader/src/app/components/prime/btn/btn-primary/btn-primary.component.html
@@ -1,1 +1,1 @@
-<p-button styleClass="fullW" [label]="label"></p-button>
+<p-button [disabled]="isDisabled" styleClass="fullW" [label]="label"></p-button>
