--- a/web/cader/src/app/auth/controllership/expense/expense-view/expense-view.component.html
+++ b/web/cader/src/app/auth/controllership/expense/expense-view/expense-view.component.html
@@ -7,6 +7,7 @@
       <expense-payment
         *ngIf="ob"
         [listPayments]="ob.payments"
+        [isDisabled]="!isDisabled"
       ></expense-payment>
     </div>
   </abas-tab>
