--- a/web/cader/src/app/components/fusion/modal-impl/modal-impl.component.scss
+++ b/web/cader/src/app/components/fusion/modal-impl/modal-impl.component.scss
@@ -1,58 +1,60 @@
-/* Estilo do modal */
-.modal {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.4);
-  z-index: 99;
-}
+:host {
+  /* Estilo do modal */
+  .modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+    z-index: 99;
+  }
 
-.show {
-  display: block;
-}
+  .show {
+    display: block;
+  }
 
-/* Conteúdo do modal */
-.modal-content {
-  background-color: #fefefe;
-  margin: 5% auto;
-  border: 1px solid #888;
-  width: 80%;
-  padding-bottom: 5rem;
-}
+  /* Conteúdo do modal */
+  .modal-content {
+    background-color: #fefefe;
+    margin: 5% auto;
+    border: 1px solid #888;
+    width: 80%;
+    padding-bottom: 5rem;
+  }
 
-/* Estilo do botão de fechar */
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
+  /* Estilo do botão de fechar */
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
 
-.actionBtn {
-  float: right;
-}
+  .actionBtn {
+    float: right;
+  }
 
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
-}
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
 
-.barActions {
-  border-bottom: #888 solid 0.3px;
-  background-color: blue;
-  height: 2.5rem;
-}
+  .barActions {
+    border-bottom: #888 solid 0.3px;
+    background-color: blue;
+    height: 2.5rem;
+  }
 
-.title {
-  color: #fff;
-  padding-top: 0.7rem;
-  padding-left: 0.7rem;
-  font-weight: bold;
-  font-size: 1.1rem;
+  .title {
+    color: #fff;
+    padding-top: 0.7rem;
+    padding-left: 0.7rem;
+    font-weight: bold;
+    font-size: 1.1rem;
+  }
 }
