--- a/web/cader/src/app/auth/controllership/movement/movement-view/movement-view.component.html
+++ b/web/cader/src/app/auth/controllership/movement/movement-view/movement-view.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="loading">
+<!-- <div *ngIf="loading">
   <div class="pd">
     <div class="line">
       <div class="fullW">
@@ -46,4 +46,4 @@
     </div>
   </div>
 </div>
-{{ ob | json }}
+{{ ob | json }} -->
