auto complete parte 1

--- a/web/cader/src/app/auth/controllership/movement/movement-filter/movement-filter.component.html
+++ b/web/cader/src/app/auth/controllership/movement/movement-filter/movement-filter.component.html
@@ -1,47 +1,17 @@
-<div class="line lineFilter">
-  <div class="itemFilter">
-    <input-date
-      [ob]="ob"
-      [atributo]="'movimentDateStart'"
-      [label]="'Data Inicial'"
-      [placeholder]="'Data Inicial'"
-    />
-  </div>
-  <div class="itemFilter">
-    <input-date
-      [ob]="ob"
-      [atributo]="'movimentDateEnd'"
-      [label]="'Data Final'"
-      [placeholder]="'Data Final'"
-    />
-  </div>
-  <div class="itemFilter">
-    <drop-dow
-      [ob]="ob"
-      [atributo]="'typeRevenueExpence'"
-      [label]="'Tipo'"
-      [placeholder]="'Tipo'"
-      [list]="typeList"
-    />
-  </div>
-  <div class="itemFilter">
-    <drop-dow
-      [ob]="ob"
-      [atributo]="'origin'"
-      [label]="'Origem'"
-      [placeholder]="'Origem'"
-      [list]="origenList"
-    />
-  </div>
-</div>
-<div class="line lineFilter">
-  <div class="itemFilter">
-    <auto-complete
-      [ob]="ob"
-      [atributo]="'idWallet'"
-      [label]="'Carteira'"
-      [placeholder]="'Carteira'"
+<div [formGroup]="form" class="m2">
+  <dropdown
+    [list]="typeList"
+    formControlName="typeRevenueExpence"
+    [label]="'Tipo'"
+  ></dropdown>
+
+  <div class="mt2">
+    <autocomplete
+      formControlName="idWallet"
       [service]="serviceWallet"
+      [label]="'Tipo'"
     />
   </div>
 </div>
+
+<button (click)="show()">show</button>
