--- a/web/cader/src/app/auth/controllership/movement/movement-filter/movement-filter.component.html
+++ b/web/cader/src/app/auth/controllership/movement/movement-filter/movement-filter.component.html
@@ -1,4 +1,4 @@
-<div [formGroup]="form" class="m2">
+<div [formGroup]="form" class="mt4 mX6">
   <div class="mt2 line">
     <inputDate
       formControlName="movimentDateStart"
@@ -33,5 +33,3 @@
     />
   </div>
 </div>
-
-<button (click)="show()">show</button>
