--- a/web/cader/src/scss/base/_margin.scss
+++ b/web/cader/src/scss/base/_margin.scss
@@ -17,3 +17,46 @@
 .mb2 {
   margin-bottom: 2rem;
 }
+.m3 {
+  margin: 3rem;
+}
+
+.ml3 {
+  margin-left: 3rem;
+}
+
+.mr3 {
+  margin-right: 3rem;
+}
+
+.mt3 {
+  margin-top: 3rem;
+}
+
+.mb3 {
+  margin-bottom: 3rem;
+}
+
+.m4 {
+  margin: 4rem;
+}
+
+.ml4 {
+  margin-left: 4rem;
+}
+
+.mr4 {
+  margin-right: 4rem;
+}
+
+.mt4 {
+  margin-top: 4rem;
+}
+
+.mb4 {
+  margin-bottom: 4rem;
+}
+
+.mX6 {
+  margin: 0 6rem;
+}
