--- a/web/cader/src/scss/base/_margin.scss
+++ b/web/cader/src/scss/base/_margin.scss
@@ -17,6 +17,11 @@
 .mb2 {
   margin-bottom: 2rem;
 }
+
+.mX2 {
+  margin: 0 2rem;
+}
+
 .m3 {
   margin: 3rem;
 }
@@ -37,6 +42,10 @@
   margin-bottom: 3rem;
 }
 
+.mX3 {
+  margin: 0 3rem;
+}
+
 .m4 {
   margin: 4rem;
 }
@@ -55,6 +64,10 @@
 
 .mb4 {
   margin-bottom: 4rem;
+}
+
+.mX4 {
+  margin: 0 4rem;
 }
 
 .mX6 {
