--- a/web/cader/src/app/components/custom/autocomplete/autocomplete.component.scss
+++ b/web/cader/src/app/components/custom/autocomplete/autocomplete.component.scss
@@ -37,7 +37,7 @@
   }
 
   .borderAutoComplete {
-    border: 1px solid rgb(201, 201, 201);
+    border: 1px solid rgba(216, 216, 216, 0.644);
     border-radius: 8px;
   }
 }
