--- a/web/cader/src/app/auth/controllership/movement/movement-view/movement-view.component.html
+++ b/web/cader/src/app/auth/controllership/movement/movement-view/movement-view.component.html
@@ -14,7 +14,7 @@
         [isDisabled]="isDisabled"
       ></inputDate>
       <autocomplete
-        formControlName="idWallet"
+        formControlName="wallet"
         [service]="serviceWallet"
         [label]="'Carteira'"
         [isDisabled]="isDisabled"
@@ -37,12 +37,12 @@
         ></dropdown>
       </div>
       <div class="fullW ml2">
-        <dropdown
+        <!-- <dropdown
           [list]="origenList"
           formControlName="origin"
           [label]="'Origem'"
           [isDisabled]="isDisabled"
-        ></dropdown>
+        ></dropdown> -->
       </div>
     </div>
   </div>
