--- a/web/cader/src/app/components/custom/dropdown/dropdown.component.html
+++ b/web/cader/src/app/components/custom/dropdown/dropdown.component.html
@@ -1,12 +1,33 @@
+<!-- <div class="fullW">
+  <span class="p-float-label fullW" *ngIf="!isDisabled">
+    <p-dropdown
+      class="fullW"
+      [options]="list"
+      [(ngModel)]="selected"
+      optionLabel="description"
+      [style]="{ width: '100%' }"
+    ></p-dropdown>
+    <label>{{ label }} </label>
+  </span>
+
+  <inputText
+    *ngIf="isDisabled"
+    [label]="label"
+    [(ngModel)]="description"
+    [isDisabled]="true"
+  ></inputText>
+</div> -->
+
 <div class="fullW">
   <span class="p-float-label fullW">
     <p-dropdown
       class="fullW"
       [options]="list"
       [(ngModel)]="selected"
-      optionLabel="name"
+      optionLabel="description"
       [style]="{ width: '100%' }"
+      [disabled]="isDisabled"
     ></p-dropdown>
-    <label>{{ label }}</label>
+    <label>{{ label }} </label>
   </span>
 </div>
