--- a/web/cader/src/app/auth/controllership/expense/expense-view/expense-detail/expense-detail.component.scss
+++ b/web/cader/src/app/auth/controllership/expense/expense-view/expense-detail/expense-detail.component.scss
@@ -10,4 +10,9 @@
   .lineExpense2 {
     padding-top: 3rem;
   }
+
+  .borderBottom {
+    border-bottom: 1px solid rgb(70, 121, 231);
+    padding-bottom: 1rem;
+  }
 }
