--- a/web/cader/src/app/auth/controllership/expense/expense-view/expense-detail/expense-detail.component.html
+++ b/web/cader/src/app/auth/controllership/expense/expense-view/expense-detail/expense-detail.component.html
@@ -1,85 +1,57 @@
-<div class="">
-  <div class="lineExpense">
-    <input-text
-      [ob]="ob"
-      [atributo]="'description'"
+<div [formGroup]="form" class="mt2 mX4">
+  <div class="fullW">
+    <inputText
+      formControlName="description"
       [label]="'Descrição'"
-      [placeholder]="'Descrição'"
       [isDisabled]="isDisabled"
     />
   </div>
-
-  <div class="lineExpense2 line">
-    <div class="itemFilter">
-      <auto-complete
-        [ob]="ob"
-        [atributo]="'idWallet'"
-        [label]="'Carteira'"
-        [placeholder]="'Carteira'"
-        [service]="serviceWallet"
-        [isDisabled]="isDisabled"
-      />
-    </div>
-    <div class="itemFilter">
-      <auto-complete
-        [ob]="ob"
-        [atributo]="'idPaymentType'"
-        [label]="'Meio Pagamento'"
-        [placeholder]="'Meio Pagamento'"
-        [service]="servicePaymentTypeService"
-        [isDisabled]="isDisabled"
-      />
-    </div>
-    <div class="itemFilter">
-      <auto-complete
-        [ob]="ob"
-        [atributo]="'idPerson'"
-        [label]="'Pessoa'"
-        [placeholder]="'Pessoa'"
-        [service]="servicePerson"
-        [isDisabled]="isDisabled"
-      />
-    </div>
-    <div class="itemFilter">
-      <auto-complete
-        [ob]="ob"
-        [atributo]="'idExpenseCategory'"
-        [label]="'Categoria'"
-        [placeholder]="'Categoria'"
-        [service]="serviceExpenseCategory"
-        [isDisabled]="isDisabled"
-      />
-    </div>
-  </div>
-  <div class="lineExpense2 line">
-    <div class="itemFilter">
-      <input-date
-        [ob]="ob"
-        [atributo]="'dueDate'"
-        [label]="'Vencimento'"
-        [placeholder]="'Vencimento'"
-        [isDisabled]="isDisabled"
-      />
-    </div>
-  </div>
-  <div class="lineExpense2 line">
-    <input-reais
-      [label]="'Valor Pago'"
-      [ob]="ob"
-      [atributo]="'amountPaid'"
-      [isDisabled]="true"
-    ></input-reais>
-    <input-reais
-      [label]="'Valor Aberto'"
-      [ob]="ob"
-      [atributo]="'openValue'"
-      [isDisabled]="true"
-    ></input-reais>
-    <input-reais
-      [label]="'Valor'"
-      [ob]="ob"
-      [atributo]="'value'"
+  <div class="lineBetween mt2">
+    <autocomplete
+      formControlName="wallet"
+      [service]="serviceWallet"
+      [label]="'Carteira'"
       [isDisabled]="isDisabled"
-    ></input-reais>
+    />
+    <autocomplete
+      formControlName="paymentType"
+      [service]="servicePaymentTypeService"
+      [label]="'Meio de Pagamento'"
+      [isDisabled]="isDisabled"
+    />
+    <autocomplete
+      formControlName="person"
+      [service]="servicePerson"
+      [label]="'Pessoa'"
+      [isDisabled]="isDisabled"
+    />
+  </div>
+  <div class="lineBetween mt2 borderBottom">
+    <autocomplete
+      formControlName="expenseCategory"
+      [service]="serviceExpenseCategory"
+      [label]="'Categoria'"
+      [isDisabled]="isDisabled"
+    />
+  </div>
+  <div class="lineBetween mt2">
+    <inputDate
+      formControlName="dueDate"
+      [label]="'Data'"
+      [isDisabled]="isDisabled"
+    ></inputDate>
+    <inputReais
+      formControlName="value"
+      [label]="'Valor Aberto'"
+      [isDisabled]="true"
+    /><inputReais
+      formControlName="value"
+      [label]="'Valor Pago'"
+      [isDisabled]="true"
+    /><inputReais
+      formControlName="value"
+      [label]="'Valor Total'"
+      [isDisabled]="isDisabled"
+    />
   </div>
 </div>
