--- a/web/cader/src/app/auth/controllership/expense/expense-view/expense-view.component.html
+++ b/web/cader/src/app/auth/controllership/expense/expense-view/expense-view.component.html
@@ -1,14 +1,12 @@
-<div *ngIf="loading">
-  <abas-tab [titles]="pages">
-    <div id="idItem0">
-      <expense-detail [ob]="ob" [isDisabled]="isDisabled"></expense-detail>
-    </div>
-    <div id="idItem1">
+<abas-tab [titles]="pages">
+  <div id="idItem0" class="mt2">
+    <expense-detail [form]="form" [isDisabled]="isDisabled"></expense-detail>
+  </div>
+  <!-- <div id="idItem1">
       <expense-payment
         *ngIf="ob"
         [listPayments]="ob.payments"
         [isDisabled]="!isDisabled"
       ></expense-payment>
-    </div>
-  </abas-tab>
-</div>
+    </div> -->
+</abas-tab>
